k8s-components/webapp-with-db-pod-service-ingress-configmap-secret-volume.yaml
# webapp-with-db-pod-service-ingress-configmap-secret-volume.yaml

apiVersion: v1
kind: Pod
metadata:
  name: webapp-with-db
  labels:
    app: my-webapp
spec:
  containers:
  - name: webapp
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: database
    image: mongo:latest
    volumeMounts:
    - name: db-data
      mountPath: /data/db
  volumes:
  - name: db-data
    persistentVolumeClaim:
      claimName: database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: my-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
